--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation 'com.fasterxml.jackson.core:jackson-databind'
+    implementation 'org.jboss.logging:jboss-logging:3.4.3.Final'
     implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
     implementation 'com.google.code.gson:gson:2.8.9'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
@@ -36,7 +37,6 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
     testImplementation 'com.h2database:h2'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 tasks.named('test') {
