--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,13 +12,13 @@ jobs:
     steps:
     - name: Check out code
       uses: actions/checkout@v2
-      
+
     - name: Set up JDK 21
       uses: actions/setup-java@v2
       with:
         java-version: '21'
         distribution: 'temurin'
-        
+
     - name: Cache Gradle packages
       uses: actions/cache@v2
       with:
@@ -26,33 +26,30 @@ jobs:
         key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
         restore-keys: |
           ${{ runner.os }}-gradle-
-          
+
     - name: Build without tests
       run: ./gradlew clean assemble
-      
+
     - name: Deploy to Server
       if: success()
       env:
         SSH_PRIVATE_KEY: ${{ secrets.SSH_KEY }}
-        SSH_HOST: ${{ secrets.SSH_HOST }}
         SSH_USER: ${{ secrets.SSH_USER }}
+        SSH_HOST: ${{ secrets.SSH_HOST }}
       run: |
-        # Start ssh-agent and add key
-        eval $(ssh-agent -s)
+        # Start ssh-agent and add the private key
+        eval "$(ssh-agent -s)"
         echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
-        
-        # Configure SSH known hosts
-        mkdir -p ~/.ssh
-        chmod 700 ~/.ssh
-        ssh-keyscan -H $SSH_HOST >> ~/.ssh/known_hosts
-        
+
+        # Disable strict host key checking and create remote directory
+        ssh -o StrictHostKeyChecking=no $SSH_USER@$SSH_HOST "mkdir -p ~/musinsa_observer"
+
         # Copy files to the server
-        ssh $SSH_USER@$SSH_HOST "mkdir -p ~/musinsa_observer"
         scp -r ./* $SSH_USER@$SSH_HOST:~/musinsa_observer/
-        
-        # Restart the application
-        ssh $SSH_USER@$SSH_HOST <<EOF
+
+        # Start the application on the server
+        ssh $SSH_USER@$SSH_HOST << 'EOF'
           pkill -f 'java -jar' || true
           cd ~/musinsa_observer/build/libs
-          nohup java -jar -Dspring.profiles.active=prod team4-0.0.1-SNAPSHOT.jar > app.log 2>&1 &
+          nohup java -jar -Dspring.profiles.active=prod team4-0.0.1-SNAPSHOT.jar &
 EOF
