--- a/build.gradle
+++ b/build.gradle
@@ -43,3 +43,7 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+tasks.named('bootJar') {
+    archiveFileName = 'team4-0.0.1-SNAPSHOT.jar'
+}
