--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: ${DATABASE_URL}
-    username: ${DATABASE_USERNAME}
-    password: ${DATABASE_PASSWORD}
+    url: ${DATABASE_URL:jdbc:mysql://default-url}
+    username: ${DATABASE_USERNAME:default_username}
+    password: ${DATABASE_PASSWORD:default_password}
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
