--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Application
+name: CI/CD Pipeline
 
 on:
   push:
@@ -6,59 +6,70 @@ on:
       - main
 
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Repository 코드 체크아웃
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - name: Check out code
+      uses: actions/checkout@v2
 
-      # 2. Java 환경 설정
-      - name: Set up JDK
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
+    - name: Set up JDK 21
+      uses: actions/setup-java@v2
+      with:
+        java-version: '21'
+        distribution: 'temurin'
 
-      # 3. Gradle 빌드
-      - name: Build Application
-        run: ./gradlew clean build -x test
+    - name: Cache Gradle packages
+      uses: actions/cache@v2
+      with:
+        path: ~/.gradle/caches
+        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+        restore-keys: |
+          ${{ runner.os }}-gradle-
+          
+    - name: Build without tests
+      run: ./gradlew clean assemble
 
-      # 4. 환경 변수 디버깅 (선택 사항: 확인용)
-      - name: Debug environment variables
-        run: |
-          echo "DATABASE_URL: $DATABASE_URL"
-          echo "DATABASE_USERNAME: $DATABASE_USERNAME"
-          echo "SSH_USER: $SSH_USER"
-          echo "SSH_HOST: $SSH_HOST"
-        env:
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}
-          DATABASE_USERNAME: ${{ secrets.DATABASE_USERNAME }}
-          DATABASE_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
-          SSH_USER: ${{ secrets.SSH_USER }}
-          SSH_HOST: ${{ secrets.SSH_HOST }}
+    - name: Check JAR file existence
+      run: ls -l build/libs
 
-      # 5. 원격 서버로 배포
-      - name: Deploy to Server
-        uses: appleboy/ssh-action@v0.1.10
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER }}
-          key: ${{ secrets.SSH_KEY }}
-          port: 22
-          script: |
-            # 기존 JAR 프로세스 종료
-            pkill -f 'java.*team4-0.0.1-SNAPSHOT.jar' || true
+    - name: Deploy to Server
+      if: success()
+      env:
+        SSH_PRIVATE_KEY: ${{ secrets.SSH_KEY }}
+        SSH_USER: ${{ secrets.SSH_USER }}
+        SSH_HOST: ${{ secrets.SSH_HOST }}
+        DATABASE_URL: ${{ secrets.DATABASE_URL }}
+        DATABASE_USERNAME: ${{ secrets.DATABASE_USERNAME }}
+        DATABASE_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
+      run: |
+        # Debug environment variables
+        echo "=== Debugging Environment Variables ==="
+        echo "DATABASE_URL: $DATABASE_URL"
+        echo "DATABASE_USERNAME: $DATABASE_USERNAME"
+        echo "SSH_USER: $SSH_USER"
+        echo "SSH_HOST: $SSH_HOST"
+        echo "======================================="
 
-            # 디렉토리 준비
-            mkdir -p ~/musinsa_observer/build/libs
+        # Start ssh-agent and add the private key
+        eval "$(ssh-agent -s)"
+        echo "$SSH_PRIVATE_KEY" | tr -d '\r' > private_key.pem
+        chmod 600 private_key.pem
+        ssh-add private_key.pem
+    
+        # Disable strict host key checking and create remote directory
+        ssh -o StrictHostKeyChecking=no $SSH_USER@$SSH_HOST "mkdir -p ~/musinsa_observer"
+    
+        # Copy built JAR file to the server
+        scp -r build/libs/team4-0.0.1-SNAPSHOT.jar $SSH_USER@$SSH_HOST:~/musinsa_observer/build/libs/
+    
+        # Start the application on the server
+        ssh $SSH_USER@$SSH_HOST << 'EOF'
+          pkill -f 'java -jar' || true
+          cd ~/musinsa_observer/build/libs
+          nohup java -jar -Dspring.profiles.active=prod team4-0.0.1-SNAPSHOT.jar &
+        EOF
 
-            # 기존 JAR 삭제
-            rm -f ~/musinsa_observer/build/libs/team4-0.0.1-SNAPSHOT.jar
-
-            # 새로운 JAR 업로드
-            cat > ~/musinsa_observer/build/libs/team4-0.0.1-SNAPSHOT.jar << 'EOF'$(cat build/libs/team4-0.0.1-SNAPSHOT.jar | base64 -w0)EOF
-            base64 -d ~/musinsa_observer/build/libs/team4-0.0.1-SNAPSHOT.jar > ~/musinsa_observer/build/libs/team4-0.0.1-SNAPSHOT.jar
-
-            # JAR 실행
-            nohup java -jar -Dspring.profiles.active=prod ~/musinsa_observer/build/libs/team4-0.0.1-SNAPSHOT.jar > ~/musinsa_observer/nohup.out 2>&1 &
+    - name: Clean up
+      if: success()
+      run: rm -f private_key.pem
