--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,16 +60,15 @@ jobs:
         chmod 600 private_key.pem
         ssh-add private_key.pem
     
-        # Prepare server (install Java and create directories)
+        # Prepare server (install Java 21 and create directories)
         ssh -o StrictHostKeyChecking=no $SSH_USER@$SSH_HOST << 'EOF'
-          echo "Ensuring Java is installed..."
-          if ! command -v java &> /dev/null
-          then
-              echo "Java not found. Installing Java..."
-              sudo amazon-linux-extras enable corretto8
-              sudo yum install -y java-1.8.0-amazon-corretto
+          echo "Ensuring Java 21 is installed..."
+          if ! java -version 2>&1 | grep -q "21"; then
+              echo "Java 21 not found. Installing Java 21..."
+              sudo amazon-linux-extras enable corretto21
+              sudo yum install -y java-21-amazon-corretto
           else
-              echo "Java is already installed."
+              echo "Java 21 is already installed."
           fi
 
           echo "Ensuring target directory exists..."
