--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -37,10 +37,13 @@ apple:
   client-secret: ${APPLE_CLIENT_SECRET}
 
 logging:
+  file:
+    name: /var/log/myapp/application.log # 로그 파일 저장 위치
   level:
-    org.springframework.security: DEBUG
-    org.springframework.web: DEBUG
-    org.springframework.security.oauth2: TRACE
+    root: INFO # 전체 로그 레벨 설정 (INFO 이상만 출력)
+    org.springframework.security: DEBUG # Spring Security 디버그 로그
+    org.springframework.web: DEBUG # 웹 디버그 로그
+    org.springframework.security.oauth2: TRACE # OAuth2 추적 로그
 
 server:
   port: 8080
